# zero2prod

./: Cargo.toml  Dockerfile  Makefile  compose.yml  configuration.yml  dagger.json
.dagger/src/: index.ts
.github/workflows/: general.yml
ci/_lib/: run-job.sh
ci/clippy/: Dockerfile  run.sh
configuration/: base.yml  production.yml
migrations/: 20251215081655_create_subscriptions_table.sql
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
